fix the destrictive color to be more saturated on dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,7 +61,7 @@
     --secondary: 222.2 4.4% 11.2%;
     --secondary-foreground: 210 4% 98%;
 
-    --destructive: 0 6% 31%;
+    --destructive: 0 60% 55%;
     --destructive-foreground: 210 4% 98%;
 
     --ring: 216 5% 30%;
